<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/title_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <ImageView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="101dp"
        android:layout_marginRight="101dp"
        android:src="@drawable/fill_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_line"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/edit_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:autofillHints="@string/Username"
        android:background="@drawable/edit_text"
        android:hint="@string/Username"
        android:inputType=""
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintRight_toRightOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/edit_line1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/edit_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/edit_text"
        android:hint="@string/Password"
        android:importantForAutofill="no"
        app:layout_constraintLeft_toLeftOf="@+id/username"
        app:layout_constraintRight_toRightOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/edit_line2"
        tools:ignore="Autoing,TextFields" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:checked="true"
        android:textColor="@color/midGray"
        android:text="@string/remember_me"
        android:theme="@style/My_CheckBox"
        app:layout_constraintLeft_toLeftOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@id/hit_message" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forget_password"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkbox"
        app:layout_constraintRight_toRightOf="@+id/password"
        android:theme="@style/My_CheckBox"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/login_button"
        android:stateListAnimator="@null"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/login_line" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/tip_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_connect_with"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_line" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/other_login_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.73" />

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="6.25dp"
        android:background="@drawable/dark_blue_background"
        android:src="@drawable/ic_facebook"
        app:layout_constraintLeft_toLeftOf="@+id/login"
        app:layout_constraintRight_toLeftOf="@+id/twitter"
        app:layout_constraintTop_toBottomOf="@id/other_login_line"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/twitter"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="6.25dp"
        android:background="@drawable/baby_blue_background"
        android:src="@drawable/ic_twitter"
        app:layout_constraintLeft_toRightOf="@+id/facebook"
        app:layout_constraintRight_toRightOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@id/other_login_line"
        tools:ignore="ContentDescription" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/email_login_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.91" />

    <Button
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/transparent_background"
        android:stateListAnimator="@null"
        android:text="@string/sign_up_with_e_mail"
        android:textAllCaps="false"
        android:textColor="@color/darkBlue"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@id/email_login_line" />

</androidx.constraintlayout.widget.ConstraintLayout>